Поменял методы на Set